# opal-editor

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-desktop.yml  ci.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  vitest.config.ts
apps/desktop/e2e/: beginner-roadmap.spec.ts
apps/desktop/scripts/: generate-previews.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: claude.rs  export.rs  history.rs  language_tool.rs  latex.rs  lib.rs  main.rs  metadata.rs  project_import.rs  reference_sources.rs  texfmt.rs  uv.rs  zotero.rs
apps/desktop/src-tauri/src/ai/: mod.rs  registry.rs
apps/desktop/src-tauri/src/ai/providers/: anthropic.rs  claude_cli.rs  mod.rs  openai.rs
apps/desktop/src/components/: ai-settings.tsx  claude-setup.tsx  command-palette.tsx  onboarding-prompt.tsx  project-import-dialog.tsx  project-picker.tsx  project-wizard.tsx  settings-dialog.tsx
apps/desktop/src/hooks/: use-ai-events.ts  use-core-editor-actions.ts  use-keyboard-shortcuts.ts  use-resizable-dialog.tsx  use-semantic-index.ts
apps/desktop/src/lib/: app-zoom.ts  appearance.ts  bibliography-import.ts  bibtex-entries.ts  bibtex.ts  citation-review.ts  default-ai-project-guide.ts  default-claude-md.ts  document-outline.ts  duplicate-bibliography.ts  editor-actions.ts  editor-themes.ts  feature-packages.ts  language-tool.ts  latex-citations.ts  latex-compiler.ts  latex-cross-references.ts  latex-environments.ts  latex-figures.ts  latex-format.ts  latex-guidance.ts  latex-inline-completion.ts  latex-math.ts  utils.ts  (+16 more)
docs/: documentation.html  index.html  wrangler.jsonc
scripts/: audit-linux-bundle.sh  audit-macos-bundle.sh  build-linux.sh  build-macos.sh  build-windows.ps1  dev-windows.ps1  normalize-debian-prerelease.sh  release-notes.mjs  release-notes.test.mjs  smoke-test-linux-packages.sh
scripts/ci-linux-repro/: Dockerfile  README.md  container-build.sh  run.sh
scripts/fixtures/: linux-smoke.tex
(+129 files in other folders)
